Minor fix on image sizes and responsiveness update
Added few hotfixes on certain image sizes that were overflowing the viewport.
Responsive functionalities have been added to improve the view for different
types of screen sizes. Also added a hamburger menu, along with a dropdown menu
for smaller devices with smaller viewports such as mobile and tablets.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-size: 1.1em;
   font-family: serif;
+  max-width: 100%;
+  overflow-x: hidden;
   background-color: #fcf9ed;
 }
 
@@ -19,6 +21,11 @@ h3 {
   margin: 15px 0 15px 0;
 }
 
+h4 {
+  color: #009f9d;
+  font-family: 'Hammersmith One', sans-serif;
+  margin: 15px 0 15px 0;
+}
 hr {
   width: 5%;
   border-top: dotted 5px;
@@ -65,6 +72,17 @@ nav {
   color: #009f9d;
 }
 
+#menu_icon {
+  position: absolute;
+  left: 80%;
+  top: 4%;
+  font-size: 2em;
+  display: none;
+}
+
+.nav-drawer {
+  display: none;
+}
 /*============================intro section========================*/
 .intro {
   display: flex;
@@ -186,6 +204,7 @@ button {
 
 button:hover {
   background-color: #0b3e41;
+  cursor: pointer;
 }
 
 
@@ -269,4 +288,174 @@ label {
   color: #009f9d;
   font-family: 'Hammersmith One', sans-serif;
   margin: 15px 0 15px 0;
+}
+
+
+/*========================Responsiveness=================================*/
+@media screen and (max-width: 360px) {
+
+hr {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.project {
+  margin-bottom: 25px;
+}
+
+.project-img {
+  display: none;
+}
+}
+
+
+
+@media screen and (max-width: 385px) {
+
+.island {
+  height: 300px;
+}
+
+.project-wrapper {
+  margin: auto;
+}
+
+.msg_in_bottle {
+  height: 285px;
+}
+
+.footer a {
+  margin-right: 15px;
+}
+}
+
+@media screen and (max-width: 400px) {
+.project-wrapper {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+}
+@media screen and (max-width: 800px) {
+
+.nav-buttons {
+  display: none;
+}
+
+.nav-drawer {
+  display: flex;
+  flex-direction: column;
+  background-color: #b9e6d3;
+  text-align: center;
+  height: auto;
+  width: 100%;
+  position: absolute;
+  transform: translate(0, -500px);
+  transition: transform .2s ease;
+}
+
+.nav-drawer.open{
+  transform: translate(0, 0);
+}
+
+.nav-drawer a {
+  font-family: 'Hammersmith One', sans-serif;
+  font-size: 16px;
+  background-color: #105e62;
+  color: #b9e6d3;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  border-bottom-style: solid;
+  border-bottom-color: #f38181;
+  border-bottom-width: thin;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.nav-drawer a:hover {
+  color: #009f9d;
+}
+
+#menu_icon  {
+   display: inline-block;
+}
+
+#menu_icon:hover {
+  color: #009f9d;
+  cursor: pointer;
+}
+
+.project-container {
+  flex-direction: column;
+  }
+
+.recent-work-1 {
+  padding-right: 0px;
+  padding-bottom: 15px;
+}
+
+.recent-work-2 {
+  padding-right: 0px;
+  padding-bottom: 15px;
+}
+
+.recent-work-3 {
+  padding-right: 0px;
+  padding-bottom: 15px;
+}
+
+
+.project {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.project-info {
+  padding-right: 0px;
+  padding-bottom: 50px
+}
+
+.project-img {
+  width: 100%;
+}
+}
+
+.intro h1 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+
+@media screen and (min-width: 801px) {
+
+.project-wrapper {
+  margin-left: 5%;
+  margin-right: 20%;
+}
+}
+
+@media screen and (min-width: 900px) {
+
+.project-wrapper {
+  margin-left: 13%;
+  margin-right: 25%;
+}
+}
+
+@media screen and (min-width: 1150px) {
+
+.project-wrapper {
+  margin-left: 17%;
+  margin-right: 25%;
+}
+}
+
+@media screen and (min-width: 1400px) {
+
+.project-wrapper {
+  margin-left: 23%;
+  margin-right: 25%;
+}
 }
